Make API base URL and CORS origins configurable via env vars